Fixed some z-index issues with snippets
Former-commit-id: dd49e71b017d544bc1c25101b5fefe42dad693d8

--- a/Apps/spatial-sensemaking/client/deviceWorldView/deviceWorldView.css
+++ b/Apps/spatial-sensemaking/client/deviceWorldView/deviceWorldView.css
@@ -9,7 +9,7 @@
   width: 160px;
   height: 160px;
   background-color: white; 
-  z-index: 9999;
+  z-index: 9002;
   /*display: none;*/
 }
 
@@ -53,7 +53,7 @@
 }
 
 #openWorldView, #closeButton {
-  z-index: 9999;
+  z-index: 9001;
   position: fixed;
   right: 50px;
   bottom: 20px;
