--- a/Apps/spatial-sensemaking/client/snippets/snippets.css
+++ b/Apps/spatial-sensemaking/client/snippets/snippets.css
@@ -14,6 +14,7 @@ html, body {
   height: 275px;
   overflow: scroll;
   background-color: rgba(255, 255, 255, 0.9);
+  z-index: 9010;
 }
 
 .snippettools {
